povýšení spring boot, testy unit4 -> unit5, Dockerfile